--- a/products.html
+++ b/products.html
@@ -37,9 +37,15 @@
     </div>
   </nav>
   <main class="pb-5 container">
+    <div class="text-center p-4">
+      <h2>Productos</h2>
+      <p>Veras aqui todos los productos de categoria Autos</p>
+    </div>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="row">
+          <div class="list-group" id="car-list-container">
+            caca
+          </div>
       </div>
     </div>
   </main>
