--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="userEmail"></p>
           </li>
         </ul>
       </div>
@@ -39,13 +40,44 @@
   <main class="pb-5 container">
     <div class="text-center p-4">
       <h2>Productos</h2>
-      <p>Veras aqui todos los productos de categoria Autos</p>
+      <p class="lead">Veras aqui todos los productos de categoria <span id="productsName"></span></p>
     </div>
     <div class="container">
       <div class="row">
-          <div class="list-group" id="car-list-container">
-            caca
+        <div class="col text-end">
+          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+            <input type="radio" class="btn-check" name="options" id="sortByDescPrice" checked>
+            <label class="btn btn-light" for="sortByDescPrice"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+            <input type="radio" class="btn-check" name="options" id="sortByAscPrice" checked>
+            <label class="btn btn-light" for="sortByAscPrice"><i class="fas fa-sort-amount-up mr-1"></i>$</label>
+            <input type="radio" class="btn-check" name="options" id="sortByProdCount" checked>
+            <label class="btn btn-light" for="sortByProdCount"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-end my-2">Precio</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin">
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterPriceMax">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="rangeFilterPrice">Filtrar</button>
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+          <div class="list-group" id="products-list-container"></div>
       </div>
     </div>
   </main>
