--- a/cart.html
+++ b/cart.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="userEmail"></p>
           </li>
         </ul>
       </div>
