--- a/product-info.html
+++ b/product-info.html
@@ -7,9 +7,15 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <style>
+    .checked {
+      color: orange;
+    }
+    </style>
 </head>
 
 <body>
@@ -31,6 +37,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="userEmail"></p>
           </li>
         </ul>
       </div>
@@ -38,10 +45,20 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div  id="product-info-container">
+
+      </div>
+      <div class="row" id="product-images" style="justify-content: space-between;">
+        
+      </div>
+      <div id="product-comments">
+
+      </div>
+      <div id="comment-form">
+
       </div>
     </div>
+
   </main>
   <footer class="text-muted">
     <div class="container">
