--- a/product-info.html
+++ b/product-info.html
@@ -36,8 +36,8 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <p class="userEmail"></p>
+          <li class="nav-item" id="user-buttom">
+
           </li>
         </ul>
       </div>
@@ -48,13 +48,16 @@
       <div  id="product-info-container">
 
       </div>
-      <div class="row" id="product-images" style="justify-content: space-between;">
+      <div class="row d-flex justify-content-between" id="product-images">
         
       </div>
       <div id="product-comments">
 
       </div>
       <div id="comment-form">
+
+      </div>
+      <div class="mt-5 row d-flex" id="related-products">
 
       </div>
     </div>
