--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <p class="userEmail"></p>
           </li>
+          <li class="nav-item" id="user-buttom">
+
+          </li>
         </ul>
       </div>
     </div>
