--- a/categories.html
+++ b/categories.html
@@ -30,8 +30,8 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <p class="userEmail"></p>
+          <li class="nav-item" id="user-buttom">
+
           </li>
         </ul>
       </div>
