--- a/sell.html
+++ b/sell.html
@@ -29,8 +29,8 @@
           <li class="nav-item">
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <p class="userEmail"></p>
+          <li class="nav-item" id="user-buttom">
+
           </li>
         </ul>
       </div>
