--- a/cart.html
+++ b/cart.html
@@ -41,9 +41,69 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div>
+        <h2 class="text-center p-4">Carrito de compras</h2>
+        <h4>Articulos a comprar</h4>
       </div>
+      <div class="table-responsive pt-4">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Costo</th>
+              <th scope="col">Cantidad</th>
+              <th scope="col">Subtotal</th>
+            </tr>
+          </thead>
+          <tbody id="cart-articles-container">
+
+          </tbody>
+        </table>
+        <hr>
+        <div>
+          <form>
+            <div>
+              <h4>Tipo de envio</h4>
+              <div class="d-block my-3">
+                <div class="custom-control custom-radio">
+                  <input id="premiumradio" name="shippingType" type="radio" class="custom-control-input" checked=""
+                    required="">
+                  <label class="custom-control-label" for="premiumradio">Premium 2 a 5 dias (15%)</label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input id="expressradio" name="shippingType" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="expressradio">Express 5 a 8 dias (7%)</label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input id="standardradio" name="shippingType" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="standardradio">Standard 12 a 15 dias (5%)</label>
+                </div>
+              </div>
+            </div>
+            <div>
+              <h4>Direccion de envio</h4>
+              <div class="row">
+                <div class="col-md-4">
+                  <label>Calle</label>
+                  <input type="text" class="form-control">
+                </div>
+                <div class="col-md-3">
+                  <label>Numero</label>
+                  <input type="text" class="form-control">
+                </div>
+              </div>
+              <div class="row pt-3">
+                <div class="col-md-4">
+                  <label>Esquina</label>
+                  <input type="text" class="form-control">
+                </div>
+              </div>
+            </div>
+        </div>
+        </form>
+      </div>
+      <hr>
     </div>
   </main>
   <footer class="text-muted">
