--- a/cart.html
+++ b/cart.html
@@ -21,16 +21,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link active" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-            <p class="userEmail"></p>
           </li>
           <li class="nav-item" id="user-buttom">
 
@@ -40,7 +37,7 @@
     </div>
   </nav>
   <main>
-    <div class="container">
+    <div class="container ">
       <div>
         <h2 class="text-center p-4">Carrito de compras</h2>
         <h4>Articulos a comprar</h4>
@@ -49,7 +46,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col"></th>
               <th scope="col">Nombre</th>
               <th scope="col">Costo</th>
               <th scope="col">Cantidad</th>
@@ -60,50 +57,92 @@
 
           </tbody>
         </table>
-        <hr>
-        <div>
-          <form>
-            <div>
-              <h4>Tipo de envio</h4>
-              <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                  <input id="premiumradio" name="shippingType" type="radio" class="custom-control-input" checked=""
-                    required="">
-                  <label class="custom-control-label" for="premiumradio">Premium 2 a 5 dias (15%)</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="expressradio" name="shippingType" type="radio" class="custom-control-input" required="">
-                  <label class="custom-control-label" for="expressradio">Express 5 a 8 dias (7%)</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="standardradio" name="shippingType" type="radio" class="custom-control-input" required="">
-                  <label class="custom-control-label" for="standardradio">Standard 12 a 15 dias (5%)</label>
-                </div>
-              </div>
-            </div>
-            <div>
-              <h4>Direccion de envio</h4>
-              <div class="row">
-                <div class="col-md-4">
-                  <label>Calle</label>
-                  <input type="text" class="form-control">
-                </div>
-                <div class="col-md-3">
-                  <label>Numero</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              <div class="row pt-3">
-                <div class="col-md-4">
-                  <label>Esquina</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-            </div>
-        </div>
-        </form>
       </div>
       <hr>
+      <form id="shippingForm" action="#" method="get" class="row mt-4 needs-validation" novalidate>
+        <div>
+          <h4>Tipo de envio</h4>
+          <div class="d-block my-3">
+            <div class="custom-control custom-radio">
+              <input id="premiumradio" name="shippingType" type="radio" class="custom-control-input" required="">
+              <label class="custom-control-label" for="premiumradio">Premium 2 a 5 dias (15%)</label>
+            </div>
+            <div class="custom-control custom-radio">
+              <input id="expressradio" name="shippingType" type="radio" class="custom-control-input" required="">
+              <label class="custom-control-label" for="expressradio">Express 5 a 8 dias (7%)</label>
+            </div>
+            <div class="custom-control custom-radio">
+              <input id="standardradio" name="shippingType" type="radio" class="custom-control-input" checked=""
+                required="">
+              <label class="custom-control-label" for="standardradio">Standard 12 a 15 dias (5%)</label>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h4>Direccion de envio</h4>
+          <div class="row pt-2">
+            <div class="col-md-4">
+              <label for="street" class="form-label my-0">Calle</label>
+              <input type="text" class="form-control" id="street" required>
+              <div class="invalid-feedback">
+                Debe Ingresar una Calle.
+              </div>
+            </div>
+            <div class="col-md-3">
+              <label for="streetnumber" class="form-label my-0">Numero</label>
+              <input type="number" class="form-control" id="streetnumber" required>
+              <div class="invalid-feedback">
+                Debe Ingresar un Numero.
+              </div>
+            </div>
+          </div>
+          <div class="row pt-3">
+            <div class="col-md-4">
+              <label for="streetcorner" class="form-label my-0">Esquina</label>
+              <input type="text" class="form-control" id="streetcorner" required>
+              <div class="invalid-feedback">
+                Debe Ingresar una Esquina.
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr class="mt-4">
+        <div>
+          <h4 class="mb-3">Costos</h4>
+          <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Subtotal</h6>
+                <small class="text-muted">Costo unitario del producto por cantidad</small>
+              </div>
+              <span class="text-muted" id="subTotalCostText">-</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Costo de envio</h6>
+                <small class="text-muted">Segun el tipo de envio</small>
+              </div>
+              <span class="text-muted" id="shippingCostText">-</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <span>Total ($)</span>
+              <strong id="totalCostText">-</strong>
+            </li>
+          </ul>
+        </div>
+        <hr class="mt-4">
+        <div>
+          <h4> Forma de pago</h4>
+          <div class="col-sm-12">
+            <small id="modalSelectedOption" class="text-muted">No ha seleccionado</small>
+            <button type="button" class=" m-1 btn btn-link" data-bs-toggle="modal"
+              data-bs-target="#paymentMethodModal">Seleccionar</button>
+            <br>
+            <small class="text-danger" id="paymentMethodWarning"></small>
+          </div>
+        </div>
+        <button class="btn btn-primary my-5" type="submit">Finalizar compra</button>
+      </form>
     </div>
   </main>
   <footer class="text-muted">
@@ -124,6 +163,82 @@
       <div></div>
     </div>
   </div>
+
+  <!-- NOTIFICACION COMPRA EXITOSA -->
+  <div class="alert alert-primary-dismissible fade" id="alertResult" role="alert">
+    <span id="resultSpan"></span>
+  </div>
+
+  <!-- MODAL -->
+  <div class="modal fade" tabindex="-1" role="dialog" id="paymentMethodModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Forma de pago</h5>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <form class="needs-validation" id="methodPaymentForm" novalidate>
+              <div>
+                <div class="form-check px-0">
+                  <input id="paymentmethod-creditcard" name="paymentmethod" type="radio"
+                    class="custom-control-input" >
+                  <label class="form-check-label" for="paymentmethod-creditcard">Tarjeta de credito</label>
+                </div>
+                <hr>
+                <div class="row pt-2">
+                  <div class="col-md-6">
+                    <label for="cardnumber" class="form-label my-0">Numero de tarjeta</label>
+                    <input type="number" class="form-control credit-card-opt" name="cardMethod" id="cardnumber" required>
+                    <div class="invalid-feedback">
+                      Debe ingresar el numero de la tarjeta.
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <label for="cvvnumber" class="form-label my-0">Codigo de seg.</label>
+                    <input type="number" class="form-control credit-card-opt" name="cardMethod" id="cvvnumber" required>
+                    <div class="invalid-feedback">
+                      Debe ingresar CVV.
+                    </div>
+                  </div>
+                </div>
+                <div class="row pt-3">
+                  <div class="col-md-6">
+                    <label for="cardexpiration" class="form-label my-0">Vencimiento (MM/AA)</label>
+                    <input type="text" class="form-control credit-card-opt" name="cardMethod" id="cardexpiration" required>
+                    <div class="invalid-feedback">
+                      Debe ingresar fecha de vencimiento.
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pt-4">
+                <div class="form-check px-0">
+                  <input id="paymentmethod-banktransfer" name="paymentmethod" type="radio"
+                    class="custom-control-input" >
+                  <label class="form-check-label" for="paymentmethod-banktransfer">Transferencia bancaria</label>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="banknumber" class="form-label my-0">Numero de cuenta</label>
+                    <input type="number" class="form-control caca" id="banknumber" required>
+                    <div class="invalid-feedback">
+                      Debe ingresar numero de cuenta.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
