--- a/product-info.html
+++ b/product-info.html
@@ -15,7 +15,7 @@
     .checked {
       color: orange;
     }
-    </style>
+  </style>
 </head>
 
 <body>
@@ -45,20 +45,44 @@
   </nav>
   <main>
     <div class="container">
-      <div  id="product-info-container">
+      <div id="product-info-container">
 
       </div>
       <div class="row d-flex justify-content-between" id="product-images">
-        
-      </div>
-      <div id="product-comments">
 
       </div>
-      <div id="comment-form">
-
+      <div>
+        <h4>Comentarios</h4>
+        <div id="product-comments">
+  
+        </div>
       </div>
-      <div class="mt-5 row d-flex" id="related-products">
-
+      <div id="">
+        <h4 class="mt-4">Comentar</h4>
+        <form>
+          <div class="form-group">
+            <label for="commentBox">Tu opinion:</label>
+            <textarea class="form-control w-50" id="commentBox" rows="3"></textarea>
+          </div>
+          <div class="form-row align-items-center">
+            <div class="col-auto my-1">
+              <label class="mr-sm-2 my-1" for="">Tu puntuacion:</label>
+              <select class="custom-select mr-sm-1" id="">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+      <div>
+        <hr class="my-5">
+        <h4 class="mb-5 mt-3">Productos relacionados</h4>
+        <div class="mt-5 row d-flex" id="related-products">
+        </div>
       </div>
     </div>
 
